[package]
name = "daily_dose"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.53", features = ["derive", "cargo"] }
comfy-table = "=7.2.1"
dirs = "6.0.0"
rusqlite = "0.38.0"
strum = { version = "0.27.2", features = ["derive"] }
ulid = "1.2.1"
